Crash accessing text style properties in object mode #110508

Closed
opened 2023-07-26 21:32:21 +02:00 by Hans Goudey · 0 comments
Member

System Information
Operating system:
Graphics card:

Blender Version
Broken: latest main
Worked: N/A
Cause by: f7ba61d3a6

Short description of error

Exact steps for others to reproduce the error

  • Add text object
  • In object mode, text object active
  • In python console type: C.object.data.
  • Press tab for autocomplete
  • Crash
**System Information** Operating system: Graphics card: **Blender Version** Broken: latest main Worked: N/A Cause by: f7ba61d3a6d96bb598aab120056d9b3f245d7abf **Short description of error** **Exact steps for others to reproduce the error** - Add text object - In object mode, text object active - In python console type: `C.object.data.` - Press tab for autocomplete - Crash
Hans Goudey added the
Status
Needs Triage
Priority
High
Type
Bug
labels 2023-07-26 21:32:39 +02:00
Hans Goudey added this to the User Interface project 2023-07-26 21:32:48 +02:00
Hans Goudey added
Status
Confirmed
Module
User Interface
and removed
Status
Needs Triage
labels 2023-07-26 21:45:56 +02:00
Harley Acheson self-assigned this 2023-07-27 02:03:59 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-27 05:31:17 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110508
No description provided.