Fix #110508: Text Object Select Attributes in Object Mode

Status of selected bold, italics, underline, and small caps requires
that the curve have an editfont object. Not checking for this works
interactively but can cause errors in Python. This PR adds explicit
getters and setters that check for editfont.

Pull Request: https://projects.blender.org/blender/blender/pulls/110513